--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -12,8 +12,7 @@ Here you can see the (public) IP address which you need to connect to the runnin
 [source,shell]
 ----
 sudo -i
-zypper refresh
-zypper update
+transactional-update
 ----
 
 . Reboot the system.
