--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
@@ -2,6 +2,9 @@
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: October 2023
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == How do I migrate an existing {productname} {byos} instance to the {payg} - {payglongform} version?
 
