--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-miscellaneous.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-miscellaneous.adoc
@@ -2,6 +2,9 @@
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: October 2023
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Where can I find out more about the Cloud Marketplace listing for {productname}?
 
