--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -1,7 +1,11 @@
 = Obtaining the {productname} Server {payg} Public Cloud Image on {azure}
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {azure}.
 
+.Procedure: Obtaining the Public Cloud Image on {azure}
 . Firstly, log in to your Azure account, via https://portal.azure.com
 
 +
