--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -1,4 +1,7 @@
 = {azure} System Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 Azure has created the Managed Application offering for this use case.
 For more information, see https://learn.microsoft.com/en-us/azure/azure-resource-manager/managed-applications/overview.
