--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -1,5 +1,8 @@
 [[azure-server-setup]]
 = Initial Setup
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 .Procedure: Log in and Update the System
 . Within the Managed Resource group you have set up, you will find the virtual machine. To get the details, click on the name of the virtual machine.
@@ -68,11 +71,6 @@ Make sure to utilize the appropriate Azure accounts which correspond to the spec
 
 
 == Configure Storage
-<<<<<<< HEAD
-. SSH into your {azure} instance.
-
-. Switch to the root user and update the system.
-=======
 
 .Procedure: Configuring Storage
 
@@ -80,7 +78,6 @@ Make sure to utilize the appropriate Azure accounts which correspond to the spec
 
 . Switch to the root user and update the system:
 
->>>>>>> 4861cf527 (Payg azure update jcayouette (#3746))
 +
 
 [source,shell]
@@ -91,14 +88,6 @@ transactional-update
 
 . Reboot the system.
 
-<<<<<<< HEAD
-. Configure storage with the [command]``mgr-storage-server`` tool or in the case of the proxy use [command]``mgr-storage-proxy``. 
-For more information, see [command]``mgr-storage-server --help`` or [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container storage and database volumes.
-
-
-. Format the command in the following manner: 
-=======
 . Configure storage using the appropriate tool:
 
 * For a standard setup, use [command]``mgr-storage-server``.
@@ -106,18 +95,10 @@ This tool simplifies creating the container storage and database volumes.
 
 For more details, run:
 
->>>>>>> 4861cf527 (Payg azure update jcayouette (#3746))
 +
 
 [source,shell]
 ----
-<<<<<<< HEAD
-mgr-storage-server <storage-disk-device> [<database-disk-device>]
-
-#For example: 
-
-mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
-=======
 mgr-storage-server --help
 mgr-storage-proxy --help
 ----
@@ -131,7 +112,6 @@ These tools simplify the creation of container storage and database volumes.
 [source,shell]
 ----
 ls /dev/disk/azure/scsi1/
->>>>>>> 4861cf527 (Payg azure update jcayouette (#3746))
 ----
 
 This command lists the disks created during deployment. Typically:
@@ -157,24 +137,6 @@ This command creates persistent storage volumes at:
 For more details, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
 ====
 
-<<<<<<< HEAD
-. As root run `mgradm install podman <FQDN>` to deploy.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-=======
 . Deploy using `mgradm` as root:
 
 +
@@ -183,4 +145,3 @@ For more details, see xref:installation-and-upgrade:container-management/persist
 ----
 mgradm install podman <FQDN>
 ----
->>>>>>> 4861cf527 (Payg azure update jcayouette (#3746))
