--- a/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
@@ -3,6 +3,9 @@
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: March 2024
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 **Last updated:** {lastupdate}
 
