--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-technical.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-technical.adoc
@@ -2,6 +2,9 @@
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: October 2023
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 **Last updated:** {lastupdate}
 
