--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -4,6 +4,9 @@
 Users can leverage the images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. 
 {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 //:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, {productname}, Monitoring
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 
 == Introduction to {payg}
