--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -43,6 +43,7 @@ For more information about the Salt bundle, see xref:client-configuration:contac
 
 +
 
+.Configuration File
 [source, Shell]
 ----
 /etc/venv-salt-minion/minion
@@ -54,6 +55,7 @@ or:
 
 +
 
+.Configuration File
 [source, Shell]
 ----
 /etc/venv-salt-minion/minion.d/NAME.conf
@@ -62,18 +64,22 @@ or:
 
 +
 
+.Configuration Parameters
 [source, YAML]
 ----
 master: SERVER.EXAMPLE.COM
 
 grains:
   susemanager:
-    activation_key: "<Activation_Key_Name>"
+    activation_key: "<Activation_Key_Name>" <1>
 
 server_id_use_crc: adler32
-enable_legacy_startup_events: False
-enable_fqdns_grains: False
+enable_legacy_startup_events: False <2> 
+enable_fqdns_grains: False <3>
 ----
+<1> Activation key Name
+<2> Legacy events should be set to False
+<3> fqdns Grains should be set to False
 
 . Restart the [systemitem]``venv-salt-minion`` service:
 
