Remove the Rocky/Alma reference when it comes to migration to liberty

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -5,7 +5,7 @@
 
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP5 to {sles}{nbsp}15{nbsp}SP6.
-You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
+You can also upgrade clients such as {rhel} or {centos} to {sll}.
 
 [IMPORTANT]
 ====
