--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -304,7 +304,7 @@ include::snippets/create_bootstrap_repo_register.adoc[]
 [[clients-sleses-el-migration]]
 == Migrate Enterprise Linux (EL) clients to {sll}
 
-If an Enterprise Linux (EL) client such as RHEL and all clones (like {centos}, {almalinux}, {rocky}, and {oracle}) is already registered as a minion on {productname} and users want to migrate it to {sll} they can use a re-activation key to apply the activation key that drives the migration.
+If an Enterprise Linux (EL) client such as {rhel} and {centos} is already registered as a minion on {productname} and users want to migrate it to {sll} they can use a re-activation key to apply the activation key that drives the migration.
 
 For more information about re-activation keys, see xref:client-configuration:activation-keys.adoc#activation-keys-reactivation[].
 
