cont. (per feedback)

--- a/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
@@ -28,11 +28,20 @@ Run all listed commands as [literal]``root`` on the container host.
 
 .Procedure: Resize Storage Medium
 
-. Increase the disk (for example, [path]``/dev/vdb``) size.
-  For example, if the disk is a QCOW2 image, use the command [command]``qemu-img resize``.
+. Increase the disk size.
+  Actions to take depend on the installation scenario.
 
-. Ensure the partition uses all available space.
-  Run the following commands:
+. If there is a partition and
+
++
+
+** modified later on, skip this step.
+
+** it was initially created with [command]``mgr-storage-server`` or [command]``mgr-storage-proxy``, and not modified later on, ensure the partition uses all available space.
+
++
+
+Run the following commands:
 
 +
 
@@ -42,8 +51,6 @@ Run all listed commands as [literal]``root`` on the container host.
 .. [literal]``(parted)`` [command]``resizepart NUMBER 100%`` where [literal]``NUMBER`` is the partition number shown by [command]``print`` command (for example, [literal]``1`` if [literal]``/dev/vdb1``)
 .. [literal]``(parted)`` [command]``quit``
 --
-
-+
 
 . Resize the filesystem.
   For example, for an XFS filesystem, run the command:
@@ -55,4 +62,4 @@ Run all listed commands as [literal]``root`` on the container host.
 xfs_growfs /dev/vdb1
 ----
 
-After completing the procedure, an XFS filesystem on [literal]``/dev/vdb1`` should be using all space available on the disk.
+After completing the procedure, an XFS filesystem should be using all space available on the disk.
