Rename to SUSE Multi-Linuxcont. (per feedback)   Manager Client Tools channel https://github.com/SUSE/spacewalk/issues/26372

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -1,7 +1,7 @@
 [[ansible-integration]]
 = Ansible Integration
 
-Currently, the supported version of Ansible is 2.9 (LTS) shipped in SUSE Linux Enterprise 15 Client Tools channels.
+Currently, the supported version of Ansible is 2.9 (LTS) shipped in {productname} Client Tools for SLE 15 channels.
 The supported OS version for the Ansible Control Node is {sles} 15 SP3, or later.
 Ansible software is also available for {productname} Proxy and {productname} {smr} Branch Server.
 For Control Nodes running operating systems other than {sle}, use Ansible shipped together with your distribution.
