--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -5,12 +5,12 @@ To set up an Ansible control node, execute the following steps from the {product
 
 .Procedure: Setting up Ansible Control Node
 
-. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are selected and synchronized.
+. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``{productname} Client Tools for SLE 15 x86_64`` are selected and synchronized.
 
 . Deploy a {sle} 15 SP5 client.
 
 . In the {productname} {webui}, navigate to the menu:Systems[Overview] page of the client.
-  Select menu:Software[Software Channels] and subscribe the client to the [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` channels.
+  Select menu:Software[Software Channels] and subscribe the client to the [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``{productname} Client Tools for SLE 15 x86_64`` channels.
 +
 
 [NOTE]
