--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -197,43 +197,54 @@ Regular database backups do not require any downtime.
   This becomes a permanent target for your backup, so ensure it remains accessible by your server at all times.
   This directory is on persistent storage, and for more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
 . At the command prompt of the {productname} container host, as root, enter the server container:
+
 +
 
+[source,shell]
 ----
 mgrctl term
 ----
 
 . Inside the container, execute the following steps:
+
 +
 
 --
 .. In your backup location, create a directory for the backup:
+
 +
+
 As root:
+
 +
+
+[source,shell]
 ----
 install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
 ----
-.. Ensure you have the correct permissions set on the backup location:
-+
-----
-chown postgres:postgres /var/spacewalk/db-backup
-----
-+
+
 .. To create a backup for the first time, run the [command]``smdba backup-hot`` command with the [option]``enable`` option set.
   This creates the backup in the specified directory, and, if necessary, restart the database:
+
 +
+
+[source,shell]
 ----
 smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup
 ----
+
 +
+
 This command produces debug messages and finishes sucessfully with the output:
+
 +
+
 ----
 INFO: Finished
 ----
-+
+
 .. Check that the backup files exist in the [path]``/var/spacewalk/db-backup`` directory, to ensure that your backup has been successful.
+
 --
 
 
@@ -250,6 +261,7 @@ We recommend you schedule regular database backups for a low-traffic period, to 
 Ensure you have at least three times the current database size of space available for backups.
 You can check your current database size by running on the container host:
 
+[source,shell]
 ----
 mgrctl exec "df -h /var/lib/pgsql"
 ----
@@ -259,33 +271,37 @@ mgrctl exec "df -h /var/lib/pgsql"
 .Procedure: Creating a directory for the backup (do it only once)
 
 . At the command prompt of the {productname} container host, as root, enter the server container:
+
 +
 
+[source,shell]
 ----
 mgrctl term
 ----
 
 . Inside the container, execute the following steps:
+
 +
 
 --
 .. In your backup location, create a directory for the backup.
    As root, enter:
+
 +
+
+[source,shell]
 ----
 install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
 ----
-.. Ensure you have the correct permissions set on the backup location:
-+
-----
-chown postgres:postgres /var/spacewalk/db-backup
-----
+
 --
 
 
 .Procedure: Scheduling Automatic Backups
 . On the container host, as root, create a system unit file at [path]``/etc/systemd/system/server-db-backup.service`` with the content:
+
 +
+
 ----
 [Unit]
 Description="Server backup service"
@@ -293,8 +309,11 @@ Description="Server backup service"
 [Service]
 ExecStart=mgrctl exec "smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup"
 ----
+
 . Create a systemd timer file at [path]``/etc/systemd/system/server-db-backup.timer`` with the content:
+
 +
+
 ----
 [Unit]
 Description="Run server database backup relative to activation time"
@@ -306,14 +325,23 @@ Unit=server-db-backup.service
 [Install]
 WantedBy=multi-user.target
 ----
+
 +
+
 . Check that all configuration are correct:
+
 +
+
+[source,shell]
 ----
 systemd-analyze verify /etc/systemd/system/server-db-backup.*
 ----
+
 . Enable the timer:
+
 +
+
+[source,shell]
 ----
 systemctl enable --now server-db-backup.timer
 ----
@@ -329,33 +357,51 @@ The [command]``smdba`` tool can be used to restore from backup in the case of fa
 
 .Procedure: Restoring from Backup
 . At the command prompt of the {productname} container host, as root, enter the server container:
+
 +
 
+[source,shell]
 ----
 mgrctl term
 ----
 
 . Inside the container, execute the following steps:
+
 +
 
 --
 .. Shut down the database:
+
 +
+
+[source,shell]
 ----
 smdba db-stop
 ----
+
 .. Start the restore process and wait for it to complete:
+
 +
+
+[source,shell]
 ----
 smdba backup-restore start
 ----
+
 .. Restart the database:
+
 +
+
+[source,shell]
 ----
 smdba db-start
 ----
+
 .. Check if there are differences between the RPMs and the database.
+
 +
+
+[source,shell]
 ----
 spacewalk-data-fsck
 ----
