--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -24,12 +24,17 @@ Supported client operating systems are listed in this table. The icons in the ta
 
 [IMPORTANT]
 ====
-The {productname} supports multiple major versions of non-SUSE client operating systems.
-However, only the latest minor release of each supported major version is fully supported.
-
-Older minor releases might still work, but will only be supported on a limited and reasonable-effort basis. 
-If issues arise on an outdated minor release, users will be asked to upgrade to the latest available minor version before further support is provided.
+The operating system running on a client is supported by the organization that supplies the operating system.
 ====
+
+//[IMPORTANT]
+//====
+//The {productname} supports multiple major versions of non-SUSE client operating systems.
+//However, only the latest minor release of each supported major version is fully supported.
+
+//Older minor releases might still work, but will only be supported on a limited and reasonable-effort basis. 
+//If issues arise on an outdated minor release, users will be asked to upgrade to the latest available minor version before further support is provided.
+//====
 
 [[supported-client-systems-snippet]]
 
