update pdf styles and added new ruby template

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -2,6 +2,11 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
+:doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
 :toclevels: 3
 endif::[]
 
