--- a/modules/administration/pages/admin-overview.adoc
+++ b/modules/administration/pages/admin-overview.adoc
@@ -1,6 +1,79 @@
+ifndef::backend-pdf[]
 [[admin-overview]]
-= Administration Guide Overview
+= Administration Guide: SUSE {productname} {productnumber}
 
-**Updated:** {docdate}
+This guide covers administration tasks like maintaining, monitoring, and customizing a {productname} Server.
 
-This book provides guidance on performing administration tasks on the {productname} Server.
+// HTML Publication date 
+**Publication Date:** {docdate}
+
+// HTML Copyright
+
+Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled “GNU Free Documentation
+License”.
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+endif::[]
+
+ifdef::backend-pdf[]
+
+<<<
+
+== Preface
+
+Administration Guide +
+{productname} {productnumber}
+
+This guide covers administration tasks like maintaining, monitoring, and customizing a {productname} Server.
+
+// PDF Publication
+
+**Publication Date:** {docdate}
+
+// PDF Copyright Space
+
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+
+
+// PDF Copyright
+
+Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled “GNU Free Documentation
+License”.
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+
+<<<
+
+
+endif::[]
