--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -117,18 +117,8 @@ To access a shell inside the Server container, run [literal]``mgrctl term`` on t
 From there, one can run the CLI tools as usual.
 ====
 
-[IMPORTANT]
-====
-The [command]``smdba`` tool requires [command]``sudo`` access, to execute system changes.
-Ensure you have enabled [command]``sudo`` access for the [username]``admin`` user before you begin, by checking the [path]``/etc/sudoers`` file for this line:
 
-----
-admin   ALL=(postgres) /usr/bin/smdba
-----
-
-====
-
-Check the runtime status of your database with:
+Check the runtime status of the database with:
 
 ----
 smdba db-status
@@ -319,7 +309,7 @@ ExecStart=mgrctl exec "smdba backup-hot --enable=on --backup-dir=/var/spacewalk/
 Description="Run server database backup relative to activation time"
 
 [Timer]
-OnCalendar=Mo..Sun *-*-* 2:00:00
+OnCalendar=Mon..Sun *-*-* 2:00:00
 Unit=server-db-backup.service
 
 [Install]
